--- a/metadata.yaml
+++ b/metadata.yaml
@@ -35,6 +35,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PS'
 - !lcsh 'Fiction'
+- GITenberg
 title: 'The Phantoms Of The Foot-Bridge
 
   1895'
